syntax = "proto3";

package com.mmtext.common;

import "google/protobuf/timestamp.proto";

option java_package = "com.mmtext.common.grpc";
option java_outer_classname = "CommonProto";

// Common message types
message User {
  string id = 1;
  string email = 2;
  string first_name = 3;
  string last_name = 4;
  string full_name = 5;
  string avatar_url = 6;
  bool active = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

message Document {
  string id = 1;
  string doc_id = 2;
  string title = 3;
  string owner_id = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
  bool allow_access_requests = 7;
}

message UserList {
  repeated User users = 1;
}

message UserIds {
  repeated string user_ids = 1;
}

message UserEmails {
  repeated string emails = 1;
}

// Standard response wrapper
message Response {
  bool success = 1;
  string message = 2;
  int32 status_code = 3;
}